manifests/app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raffles
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raffles
  template:
    metadata:
      labels:
        app: raffles
    spec:
      containers:
      - name: raffles
        image: raffles:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: raffles-service
  namespace: app
spec:
  selector:
    app: raffles
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 18080
  type: LoadBalancer  # 或者使用 ClusterIP
